<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_70sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_10sdp"

        app:cardElevation="@dimen/_5sdp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageView
                android:id="@+id/image_rv"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="@dimen/_12sdp"
                app:srcCompat="@drawable/car1" />

            <TextView
                android:id="@+id/name"
                android:layout_width="141dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="@dimen/_13sdp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="59dp"
                android:layout_toStartOf="@+id/textView2"
                android:layout_toEndOf="@+id/image_rv"
                android:fontFamily="@font/roboto"
                android:text="@string/raees_ahmad"
                android:textColor="#444444"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:id="@+id/txtph"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_12sdp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="@dimen/_10sdp"

                android:layout_marginEnd="@dimen/_50sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_toEndOf="@+id/image_rv"
                android:fontFamily="@font/roboto"

                android:text="@string/toyota_prius_gv8042_mini_white"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_9sdp" />

            <RatingBar
                android:id="@+id/ratingBar"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/txtph"
                android:layout_below="@+id/name"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_toEndOf="@+id/image_rv"
                android:numStars="5"
                android:stepSize="0.1" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="13dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/on_duty"
                android:textSize="@dimen/_9sdp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/txtph"
                android:layout_below="@+id/name"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_toStartOf="@+id/textView2"
                android:layout_toEndOf="@+id/ratingBar"
                android:fontFamily="@font/roboto"
                android:text="@string/_4"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_9sdp" />


        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>