<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        app:cardElevation="@dimen/_5sdp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageView
                android:id="@+id/image_rv"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/pro_img"
                android:layout_marginStart="@dimen/_3sdp"/>

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="@dimen/_11sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_toEndOf="@+id/image_rv"
                android:fontFamily="@font/roboto"
                android:text="@string/raees_ahmad"
                android:textColor="@color/headingColor"
                android:textSize="@dimen/_14sdp" />
            <ImageView
                android:id="@+id/car"
                android:layout_width="@dimen/_9sdp"
                android:layout_height="@dimen/_9sdp"
                android:src="@drawable/car_icon"
                android:layout_toEndOf="@+id/image_rv"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_above="@+id/pin"
                android:layout_marginBottom="@dimen/_5sdp"/>
            <TextView
                android:id="@+id/txtph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/car"
                android:fontFamily="@font/roboto"
                android:text="@string/toyota_prius_gv8042_mini_white"
                android:textColor="@color/headingColor"
                android:textSize="@dimen/_10sdp"
                android:layout_above="@+id/address"
                android:ellipsize="end"
                android:layout_marginStart="@dimen/_3sdp"/>

            <ImageView
                android:id="@+id/pin"
                android:layout_width="@dimen/_9sdp"
                android:layout_height="@dimen/_9sdp"
                android:src="@drawable/pin_black"
                android:layout_toEndOf="@+id/image_rv"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_6sdp"
                />
            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_12sdp"
                android:layout_toEndOf="@+id/pin"
                android:fontFamily="@font/roboto"
                android:text="Defence phase VII, near Chai Shai hvhvhhjjjjjjjjjhhjvhvhjvjhjjhhjhvjhv"
                android:textColor="@color/headingColor"
                android:textSize="@dimen/_10sdp"
                android:layout_alignParentBottom="true"
                android:ellipsize="end"
                android:layout_marginBottom="@dimen/_6sdp"
                android:layout_marginStart="@dimen/_3sdp"/>

            <RatingBar
                android:id="@+id/ratingBar"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/txtph"
                android:layout_below="@+id/name"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_toEndOf="@+id/image_rv"
                android:numStars="5"
                android:stepSize="0.1"
                android:progressTint="@color/colorPrimary"
                android:progressBackgroundTint="@color/subtextColor"
                android:rating="4"/>

            <ImageView
                android:id="@+id/textView2"
                android:layout_width="@dimen/_18sdp"
                android:layout_height="@dimen/_18sdp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/_10sdp"
                android:src="@drawable/phone"
                android:layout_marginTop="@dimen/_3sdp"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/txtph"
                android:layout_below="@+id/name"
                android:layout_marginStart="@dimen/_7sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_toEndOf="@+id/ratingBar"
                android:fontFamily="@font/roboto"
                android:text="@string/_4"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_9sdp" />


        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>