<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/chauffeur_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".ChauffeurProfile">


    <RelativeLayout
        android:id="@+id/taskbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"

            android:layout_centerVertical="true"
            android:fontFamily="@font/ubuntu_bold"
            android:gravity="center"
            android:text="Raees profile"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_18sdp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_14sdp"
            app:srcCompat="@drawable/back" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/taskbar">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.cardview.widget.CardView
                    android:id="@+id/uppercard"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_70sdp"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_10sdp"

                    app:cardElevation="@dimen/_5sdp"
                    >

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/image_rv"
                            android:layout_width="@dimen/_50sdp"
                            android:layout_height="@dimen/_50sdp"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="@dimen/_14sdp"
                            android:layout_marginTop="@dimen/_12sdp"
                            android:background="@drawable/clip" />

                        <TextView
                            android:id="@+id/name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_12sdp"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_marginEnd="59dp"
                            android:layout_toStartOf="@+id/textView2"
                            android:layout_toEndOf="@+id/image_rv"
                            android:fontFamily="@font/roboto"
                            android:text="@string/raees_ahmad"
                            android:textColor="#444444"
                            android:textSize="@dimen/_14sdp" />

                        <TextView
                            android:id="@+id/txtph"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/_12sdp"
                            android:layout_alignParentBottom="true"
                            android:layout_marginStart="@dimen/_3sdp"
                            android:layout_marginBottom="@dimen/_10sdp"
                            android:layout_toEndOf="@+id/phone"
                            android:fontFamily="@font/roboto"
                            android:text="03001552448"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/_9sdp" />

                        <ImageView
                            android:id="@+id/phone"
                            android:layout_width="@dimen/_10sdp"
                            android:layout_height="@dimen/_10sdp"
                            android:src="@drawable/phone"
                            android:layout_toEndOf="@+id/image_rv"
                            android:layout_marginStart="@dimen/_12sdp"
                            android:layout_alignParentBottom="true"
                            android:layout_marginBottom="@dimen/_10sdp"
                            />
                        <RatingBar
                            android:id="@+id/ratingBar"
                            style="?android:attr/ratingBarStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_marginTop="@dimen/_8sdp"
                            android:layout_marginBottom="@dimen/_5sdp"
                            android:layout_centerVertical="true"
                            android:layout_toEndOf="@+id/image_rv"
                            android:numStars="5"
                            android:stepSize="0.1"
                            android:progressTint="@color/colorPrimary"
                            android:progressBackgroundTint="@color/subtextColor"
                            android:rating="4"/>

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="18dp"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentEnd="true"
                            android:layout_marginTop="12dp"
                            android:layout_marginEnd="13dp"
                            android:fontFamily="@font/roboto_bold"
                            android:text="@string/on_duty"
                            android:textColor="@android:color/holo_green_dark"
                            android:textSize="@dimen/_9sdp" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_margin="@dimen/_10sdp"
                            android:layout_toEndOf="@+id/ratingBar"
                            android:fontFamily="@font/roboto"
                            android:text="@string/_4"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/_9sdp" />


                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_200sdp"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    app:cardElevation="@dimen/_5sdp"
                    android:layout_below="@+id/uppercard"
                    >




                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TableLayout
                            android:id="@+id/table"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:stretchColumns="0,2,4"
                            android:shrinkColumns="1,3"
                            >
                            <TableRow
                                android:id="@+id/row1"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_5sdp"
                                >

                                <RelativeLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content">

                                    <TextView
                                        android:id="@+id/hours"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_centerHorizontal="true"
                                        android:fontFamily="@font/roboto_bold"
                                        android:text="Experience "
                                        android:textSize="@dimen/_14sdp" />

                                    <TextView
                                        android:id="@+id/number"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_below="@+id/hours"
                                        android:layout_centerHorizontal="true"
                                        android:fontFamily="@font/roboto"
                                        android:text="08"
                                        android:textColor="@color/colorPrimary"
                                        android:textSize="@dimen/_16sdp" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_below="@+id/number"
                                        android:layout_centerHorizontal="true"
                                        android:fontFamily="@font/roboto_bold"
                                        android:text="DAYS"
                                        android:textSize="@dimen/_9sdp" />


                                </RelativeLayout>
                                <View
                                    android:id="@+id/divider1"
                                    android:layout_width="@dimen/_1sdp"
                                    android:layout_height="@dimen/_40sdp"
                                    android:layout_toEndOf="@+id/hours"
                                    android:background="@color/common_google_signin_btn_text_light_disabled" />
                                <RelativeLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content">
                                    <TextView
                                        android:id="@+id/cancel"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="Successfull "
                                        android:fontFamily="@font/roboto_bold"
                                        android:textSize="@dimen/_14sdp"
                                        android:layout_centerHorizontal="true"/>
                                    <!--android:layout_marginStart="@dimen/_27sdp"-->
                                    <!--android:layout_marginTop="@dimen/_11sdp"/>-->
                                    <TextView
                                        android:id="@+id/number1"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="06"
                                        android:textSize="@dimen/_16sdp"
                                        android:fontFamily="@font/roboto"
                                        android:layout_below="@+id/cancel"
                                        android:layout_centerHorizontal="true"
                                        android:textColor="@color/colorPrimary"/>
                                    />
                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="RIDES"
                                        android:textSize="@dimen/_9sdp"
                                        android:fontFamily="@font/roboto_bold"
                                        android:layout_below="@+id/number1"
                                        android:layout_centerHorizontal="true"/>

                                    />
                                </RelativeLayout>

                            </TableRow>
                        </TableLayout>
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_below="@+id/table"
                            android:layout_margin="@dimen/_10sdp">
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="@dimen/_70sdp"
                                android:src="@drawable/star5"
                                android:layout_centerVertical="true"
                                android:layout_centerHorizontal="true"/>
                        </RelativeLayout>

                    </RelativeLayout>


                </androidx.cardview.widget.CardView>




            </RelativeLayout>

        </ScrollView>

    </RelativeLayout>

</RelativeLayout>